Made changes in accordance with the comments